# docs/swagger.json
@@ -38,6 +38,16 @@
                     "es配置"
                 ],
                 "summary": "添加es配置",
+                "parameters": [
+                    {
+                        "description": "es配置",
+                        "name": "newConfig",
+                        "in": "body",
+                        "schema": {
+                            "$ref": "#/definitions/models.ESConfig"
+                        }
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "code\",\"msg\",\"data\"}",
@@ -60,6 +70,14 @@
                     "es配置"
                 ],
                 "summary": "删除es配置",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "索引名称",
+                        "name": "name",
+                        "in": "query"
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "code\",\"msg\",\"data\"}",
@@ -104,6 +122,16 @@
                     "es配置"
                 ],
                 "summary": "设置es配置",
+                "parameters": [
+                    {
+                        "description": "es配置",
+                        "name": "newConfig",
+                        "in": "body",
+                        "schema": {
+                            "$ref": "#/definitions/models.ESConfig"
+                        }
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "code\",\"msg\",\"data\"}",
@@ -148,6 +176,14 @@
                     "es查询"
                 ],
                 "summary": "获取es索引mappings",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "索引名称",
+                        "name": "index",
+                        "in": "query"
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "code\",\"msg\",\"data\"}",
@@ -155,6 +191,31 @@
                             "type": "string"
                         }
                     }
+                }
+            }
+        }
+    },
+    "definitions": {
+        "models.ESConfig": {
+            "type": "object",
+            "properties": {
+                "address": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "password": {
+                    "type": "string"
+                },
+                "selected": {
+                    "type": "boolean"
+                },
+                "username": {
+                    "type": "string"
+                },
+                "version": {
+                    "type": "string"
                 }
             }
         }
